src/style.scss
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Outfit:wght@100..900&display=swap');

:root {
  font-family: "Lato", sans-serif;
}

* {
  box-sizing: border-box;
}

html, body {
  padding: 0;
  margin: 0;
  max-width: 100vw;
  max-height: 100vh;
  height: 100vh;
  overflow-y: auto;
  overflow-x: hidden;
}

#app {
  height: 100%;
}

